Trying to keep track of images
Added ref to a db, and a sidebar for tags

--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
   <link rel="stylesheet" href="dist/oryx.css" />
 </head>
 <body>
-  <textarea id="code"></textarea>
+  <div class="window-container">
+    <div class="window-tags">
+      <p>
+        Test search bar
+      </p>
+      <p>
+        Test tag 1
+      </p>
+      <p>
+        Test tag 2
+      </p>
+    </div>
+    <textarea id="code"></textarea>
+
+  </div>
+
 </body>
 <script src="dist/build.js"></script>
 </html>
