--- a/index.html
+++ b/index.html
@@ -6,15 +6,10 @@
 </head>
 <body>
   <div class="window-container">
-    <div class="window-tags">
+    <div class="window-tags" id="search">
+      <input type="text" placeholder="search" v-model="searchInput">
       <p>
-        Test search bar
-      </p>
-      <p>
-        Test tag 1
-      </p>
-      <p>
-        Test tag 2
+        {{ searchInput }}
       </p>
     </div>
     <textarea id="code"></textarea>
