--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
   <div class="window-container">
     <div class="window-tags" id="search">
       <input type="text" placeholder="search" v-model="searchInput">
-      <p>
-        {{ searchInput }}
-      </p>
+      <div class="file-preview" v-for="(f, title) in files">
+        <p>
+          {{ title }}
+        </p>
+        <p>
+          {{ f }}
+        </p>
+      </div>
     </div>
     <textarea id="code"></textarea>
 
