--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <div class="window-container">
     <div class="window-tags" id="search">
       <input type="text" placeholder="search" v-model="searchInput">
-      <div class="file-preview" v-for="(f, title) in files">
+      <div class="file-preview" v-for="f in files">
         <p>
-          {{ title }}
+          {{ f.doc.title }}
         </p>
         <p>
-          {{ f }}
+          {{ f.doc.preview }}
         </p>
       </div>
     </div>
