got it working with electron, and removing some browserify things
they are no longer necessary

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <link rel="stylesheet" href="node_modules/codemirror/theme/base16-dark.css" />
   <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css" />
   <link rel="stylesheet" href="dist/oryx.css" />
+  <!-- <script>window.ipcRenderer = require('electron').ipcRenderer;</script> -->
 </head>
 <body>
   <div class="window-container">
@@ -29,5 +30,5 @@
   </div>
 
 </body>
-<script src="dist/build.js"></script>
+<script src="main.js"></script>
 </html>
