--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
   <div class="window-container">
     <div class="window-tags" id="sidebar">
-      <input id="search-bar" type="text" placeholder="search" v-model="searchInput">
+      <input id="search-bar" ref="inp" @keyup.esc="clearInput" type="text" placeholder="search" v-model="searchInput">
       <div id="file-lister">
-        <div class="file-preview" v-for="f in files">
+        <div class="file-preview" @click="open(f._id)" @contextmenu="deleteEntry(f._id)" v-for="f in files">
           <div class="file-title no-overflow">
             {{ f.title }}
           </div>
