added to readme and some other stuff

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html>
 <head>
+  <link rel="stylesheet" href="dist/cm-override.css" />
   <link rel="stylesheet" href="node_modules/codemirror/theme/base16-dark.css" />
   <link rel="stylesheet" href="node_modules/codemirror/lib/codemirror.css" />
   <link rel="stylesheet" href="dist/oryx.css" />
-  <!-- <script>window.ipcRenderer = require('electron').ipcRenderer;</script> -->
 </head>
 <body>
   <div class="window-container">
     <div class="window-tags" id="sidebar">
-      <input id="search-bar" ref="inp" @keyup.esc="clearInput" type="text" placeholder="search" v-model="searchInput">
+      <input id="search-bar" ref="inp" @keyup.enter="chooseFirst" @keyup.esc="clearInput" type="text" placeholder="search" v-model="searchInput">
       <div id="file-lister">
         <div class="file-preview" @click="open(f._id)" @contextmenu="deleteEntry(f._id)" v-for="f in files">
           <div class="file-title no-overflow">
